# Stack

./: .gitmodules  CMakeLists.txt
external_libs/: CMakeLists.txt
include/: CMakeLists.txt
include/stack/: stack.h
src/: CMakeLists.txt
tests/: CMakeLists.txt  test.cpp
